-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0, 6.4
-
None
-
-
3702c4ccc1 (qt/qtwebview/dev) 119e21eb0a (qt/qtwebview/6.3) 119e21eb0a (qt/tqtc-qtwebview/6.3) 3702c4ccc1 (qt/tqtc-qtwebview/dev) 119e21eb0a (qt/qtwebview/6.3.1) 119e21eb0a (qt/tqtc-qtwebview/6.3.1) 3702c4ccc1 (qt/tqtc-qtwebview/6.4)
qtwebview tests for setAndDeleteCookie (qml included) crash with the following because
the native java calls are not registered c_onCookieAdded() c_onCookiesRemoved()
E le.tst_qwebvie: No implementation found for void org.qtproject.qt.android.view.QtAndroidWebViewController.c_onCookieAdded(long, boolean, java.lang.String, java.lang.String) (tried Java_org_qtproject_qt_android_view_QtAndroidWebViewController_c_1onCookieAdded and Java_org_qtproject_qt_android_view_QtAndroidWebViewController_c_1onCookieAdded__JZLjava_lang_String_2Ljava_lang_String_2)E le.tst_qwebvie: No implementation found for void org.qtproject.qt.android.view.QtAndroidWebViewController.c_onCookieAdded(long, boolean, java.lang.String, java.lang.String) (tried Java_org_qtproject_qt_android_view_QtAndroidWebViewController_c_1onCookieAdded and Java_org_qtproject_qt_android_view_QtAndroidWebViewController_c_1onCookieAdded__JZLjava_lang_String_2Ljava_lang_String_2)D AndroidRuntime: Shutting down VME AndroidRuntime: FATAL EXCEPTION: mainE AndroidRuntime: Process: org.qtproject.example.tst_qwebview, PID: 20737E AndroidRuntime: java.lang.UnsatisfiedLinkError: No implementation found for void org.qtproject.qt.android.view.QtAndroidWebViewController.c_onCookieAdded(long, boolean, java.lang.String, java.lang.String) (tried Java_org_qtproject_qt_android_view_QtAndroidWebViewController_c_1onCookieAdded and Java_org_qtproject_qt_android_view_QtAndroidWebViewController_c_1onCookieAdded__JZLjava_lang_String_2Ljava_lang_String_2)E AndroidRuntime: at org.qtproject.qt.android.view.QtAndroidWebViewController.c_onCookieAdded(Native Method)E AndroidRuntime: at org.qtproject.qt.android.view.QtAndroidWebViewController.access$2000(QtAndroidWebViewController.java:65)E AndroidRuntime: at org.qtproject.qt.android.view.QtAndroidWebViewController$19.onReceiveValue(QtAndroidWebViewController.java:541)E AndroidRuntime: at org.qtproject.qt.android.view.QtAndroidWebViewController$19.onReceiveValue(QtAndroidWebViewController.java:537)E AndroidRuntime: at a8.a(chromium-SystemWebView.apk-default-410412056:1)E AndroidRuntime: at Co.run(chromium-SystemWebView.apk-default-410412056:1)E AndroidRuntime: at android.os.Handler.handleCallback(Handler.java:938)E AndroidRuntime: at android.os.Handler.dispatchMessage(Handler.java:99)E AndroidRuntime: at android.os.Looper.loop(Looper.java:223)E AndroidRuntime: at android.app.ActivityThread.main(ActivityThread.java:7664)E AndroidRuntime: at java.lang.reflect.Method.invoke(Native Method)E AndroidRuntime: at com.android.internal.os.RuntimeInit$MethodAndArgsCaller.run(RuntimeInit.java:592)E AndroidRuntime: at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:947)I Process : Sending signal. PID: 20737 SIG: 9
- relates to
-
QTBUG-102709 Report failing tests for other modules
-
- Closed
-
| For Gerrit Dashboard: QTBUG-102801 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 406467,4 | Android: ignore some webview test cases | dev | qt/qtwebview | Status: MERGED | +2 | 0 |
| 407178,8 | Fix crash due to missing native functions for the cookie APIs | dev | qt/qtwebview | Status: MERGED | +2 | 0 |
| 407405,2 | Android: ignore some webview test cases | 6.3 | qt/qtwebview | Status: MERGED | +2 | 0 |
| 407407,3 | Android: ignore some webview test cases | tqtc/lts-6.2 | qt/tqtc-qtwebview | Status: MERGED | +2 | 0 |
| 410377,2 | Fix crash due to missing native functions for the cookie APIs | 6.3 | qt/qtwebview | Status: MERGED | +2 | 0 |