Fix crash due to missing native functions for the cookie APIs

The cookie API that was added in 317e13cb2d97 missed the registration
and implementation for the native java functions needed for notifying
when a cookie got added/removed.

Fixes: QTBUG-102801
Pick-to: 6.3
Change-Id: I7594f75abba17b6ff1843d5349af085f90aae9b1
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>